network-policies/policies/grafana.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: grafana
  namespace: monitoring

spec:
  podSelector:
    matchLabels:
      app: grafana

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 3000



---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: monitoring

spec:
  podSelector: {}

  policyTypes:
    - Ingress
