network-policies/policies/opensearch-exporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-prometheus
  namespace: opensearch

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus-elasticsearch-exporter

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9108
