network-policies/policies/postgresql-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: allow-prometheus
  namespace: postgresql

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: prometheus

      ports:
        - protocol: TCP
          port: 9187
