network-policies/policies/postgresql.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgresql
  namespace: postgresql

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: postgresql

  policyTypes:
    - Ingress

  ingress:

    # PostgreSQL Clients
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 5432

    # CloudNativePG Operator
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: cnpg-system
      ports:
        - protocol: TCP
          port: 8000
