network-policies/policies/prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: prometheus
  namespace: prometheus

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 9090

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: prometheus-operator
  namespace: prometheus

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: prometheus-operator

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 10250

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: kube-state-metrics
  namespace: prometheus

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics

  policyTypes:
    - Ingress

  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus

      ports:
        - protocol: TCP
          port: 8080
