network-policies/policies/rabbitmq.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: rabbitmq
  namespace: rabbitmq

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: rabbitmq

  policyTypes:
    - Ingress

  ingress:

    ##################################################
    # RabbitMQ Cluster Internal Communication
    ##################################################

    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: rabbitmq

      ports:
        - protocol: TCP
          port: 4369

        - protocol: TCP
          port: 25672

    ##################################################
    # Client Connections
    ##################################################

    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 5672

    ##################################################
    # RabbitMQ Management UI
    ##################################################

    - from:
        - namespaceSelector: {}

      ports:
        - protocol: TCP
          port: 15672

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: default-deny
  namespace: rabbitmq

spec:
  podSelector: {}

  policyTypes:
    - Ingress
