network-policies/policies/traefik.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: traefik-ingress
  namespace: kube-system

spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik

  policyTypes:
    - Ingress
    - Egress

  ingress:

    # HTTP
    - ports:
        - protocol: TCP
          port: 8000

    # HTTPS
    - ports:
        - protocol: TCP
          port: 8443

    # PostgreSQL
    - ports:
        - protocol: TCP
          port: 5432

    # Redis
    - ports:
        - protocol: TCP
          port: 6379

    # RabbitMQ
    - ports:
        - protocol: TCP
          port: 5672

    # RabbitMQ Management
    - ports:
        - protocol: TCP
          port: 15672

    # OpenSearch
    - ports:
        - protocol: TCP
          port: 9200

    # MinIO
    - ports:
        - protocol: TCP
          port: 9000

  egress:
    - {}
